// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ZoneEgresses.vue renders snapshot when multizone 1`] = `
<div
  class="zoneegresses"
>
  <div
    class="component-frame"
  >
    
    <div
      class="data-overview"
      data-testid="data-overview"
    >
      <div
        class="data-table-controls mb-2"
      >
        
        
        <button
          class="medium rounded primary k-button refresh-button"
          data-testid="data-overview-refresh-button"
          type="button"
        >
          
          <!---->
          
          
          <span
            class="refresh-icon custom-control-icon"
          >
            <svg
              viewBox="0 0 36 36"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="#fff"
                fill-rule="nonzero"
              >
                <path
                  d="M18 5.5a12.465 12.465 0 00-8.118 2.995 1.5 1.5 0 001.847 2.363l.115-.095A9.437 9.437 0 0118 8.5l.272.004a9.487 9.487 0 019.07 7.75l.04.246H25a.5.5 0 00-.416.777l4 6a.5.5 0 00.832 0l4-6 .04-.072A.5.5 0 0033 16.5h-2.601l-.017-.15C29.567 10.2 24.294 5.5 18 5.5zM2.584 18.723l-.04.072A.5.5 0 003 19.5h2.6l.018.15C6.433 25.8 11.706 30.5 18 30.5c3.013 0 5.873-1.076 8.118-2.995a1.5 1.5 0 00-1.847-2.363l-.115.095A9.437 9.437 0 0118 27.5l-.272-.004a9.487 9.487 0 01-9.07-7.75l-.041-.246H11a.5.5 0 00.416-.777l-4-6a.5.5 0 00-.832 0l-4 6z"
                />
              </g>
            </svg>
          </span>
          <span>
            Refresh
          </span>
          
          <!---->
        </button>
      </div>
      <div
        class="data-overview-content"
      >
        <!-- data -->
        <div
          class="data-overview-table"
        >
          <div
            class="k-table-container"
            data-testid="data-overview-table"
            is-clickable=""
          >
            <!---->
            <section
              class="k-table-wrapper"
            >
              <table
                class="has-hover is-clickable k-table"
                data-tableid="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
              >
                <thead
                  class=""
                >
                  <tr
                    class=""
                  >
                    
                    <th
                      class=""
                    >
                      <span
                        class="d-flex align-items-center"
                      >
                        
                        <span
                          class="sr-only"
                        >
                          actions
                        </span>
                        
                        <!---->
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span
                        class="d-flex align-items-center"
                      >
                        
                        <span
                          class=""
                        >
                          Status
                        </span>
                        
                        <!---->
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span
                        class="d-flex align-items-center"
                      >
                        
                        <span
                          class=""
                        >
                          Name
                        </span>
                        
                        <!---->
                      </span>
                    </th>
                    
                  </tr>
                </thead>
                <tbody>
                  
                  <tr
                    class="is-selected"
                    role="link"
                    tabindex="0"
                  >
                    
                    <td
                      class=""
                    >
                      
                      
                      
                    </td>
                    <td
                      class=""
                    >
                      
                      <div
                        class="entity-status is-online"
                      >
                        <span>
                          Online
                        </span>
                      </div>
                      
                    </td>
                    <td
                      class=""
                    >
                      
                      
                      zoneegress-1
                      
                      
                    </td>
                    
                  </tr>
                  
                </tbody>
              </table>
              <!---->
            </section>
          </div>
          <div
            class="pagination"
          >
            <!--v-if-->
            <!--v-if-->
          </div>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </div>
    <div
      class="tab-container"
      data-testid="tab-container"
    >
      
      <header
        class="tab__header"
      >
        
        <div>
          <h3>
             Zone Egress: zoneegress-1
          </h3>
        </div>
        
      </header>
      <div
        class="tab__content-container"
      >
        <div
          class="k-tabs"
        >
          <ul
            aria-label="Tabs"
            role="tablist"
          >
            
            <li
              aria-controls="panel-0"
              aria-selected="true"
              class="active tab-item"
              id="overview-tab"
              role="tab"
              tabindex="0"
            >
              <a
                class="tab-link"
              >
                
                Overview
                
              </a>
            </li>
            <li
              aria-controls="panel-1"
              aria-selected="false"
              class="tab-item"
              id="insights-tab"
              role="tab"
              tabindex="0"
            >
              <a
                class="tab-link"
              >
                
                Zone Egress Insights
                
              </a>
            </li>
            <li
              aria-controls="panel-2"
              aria-selected="false"
              class="tab-item"
              id="xds-configuration-tab"
              role="tab"
              tabindex="0"
            >
              <a
                class="tab-link"
              >
                
                XDS Configuration
                
              </a>
            </li>
            <li
              aria-controls="panel-3"
              aria-selected="false"
              class="tab-item"
              id="envoy-stats-tab"
              role="tab"
              tabindex="0"
            >
              <a
                class="tab-link"
              >
                
                Stats
                
              </a>
            </li>
            <li
              aria-controls="panel-4"
              aria-selected="false"
              class="tab-item"
              id="envoy-clusters-tab"
              role="tab"
              tabindex="0"
            >
              <a
                class="tab-link"
              >
                
                Clusters
                
              </a>
            </li>
            
          </ul>
          
          <div
            aria-labelledby="overview-tab"
            class="tab-container"
            id="panel-0"
            role="tabpanel"
            tabindex="0"
          >
            
            
            <div>
              <div
                class="label-list-content"
              >
                <section
                  aria-describedby="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                  class="noBorder kong-card"
                >
                  <!---->
                  <!---->
                  <div
                    class="k-card-content d-flex"
                  >
                    <div
                      class="k-card-body"
                      id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                    >
                      
                      <div
                        class="label-list__col-wrapper multi-col"
                      >
                        
                        <div>
                          <ul>
                            
                            <li>
                              <h4>
                                type
                              </h4>
                              <p>
                                ZoneEgressOverview
                              </p>
                            </li>
                            <li>
                              <h4>
                                name
                              </h4>
                              <p>
                                zoneegress-1
                              </p>
                            </li>
                            
                          </ul>
                        </div>
                        
                      </div>
                      
                    </div>
                    <!---->
                  </div>
                </section>
              </div>
            </div>
            
            
          </div>
          <div
            aria-labelledby="insights-tab"
            class="tab-container"
            id="panel-1"
            role="tabpanel"
            tabindex="0"
          >
            <!---->
          </div>
          <div
            aria-labelledby="xds-configuration-tab"
            class="tab-container"
            id="panel-2"
            role="tabpanel"
            tabindex="0"
          >
            <!---->
          </div>
          <div
            aria-labelledby="envoy-stats-tab"
            class="tab-container"
            id="panel-3"
            role="tabpanel"
            tabindex="0"
          >
            <!---->
          </div>
          <div
            aria-labelledby="envoy-clusters-tab"
            class="tab-container"
            id="panel-4"
            role="tabpanel"
            tabindex="0"
          >
            <!---->
          </div>
          
        </div>
      </div>
      
    </div>
    
  </div>
</div>
`;

exports[`ZoneEgresses.vue renders snapshot when no multizone 1`] = `
<div
  class="zoneegresses"
>
  <div
    class="component-frame"
  >
    
    <div
      class="data-overview"
      data-testid="data-overview"
    >
      <div
        class="data-table-controls mb-2"
      >
        
        
        <button
          class="medium rounded primary k-button refresh-button"
          data-testid="data-overview-refresh-button"
          type="button"
        >
          
          <!---->
          
          
          <span
            class="refresh-icon custom-control-icon"
          >
            <svg
              viewBox="0 0 36 36"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="#fff"
                fill-rule="nonzero"
              >
                <path
                  d="M18 5.5a12.465 12.465 0 00-8.118 2.995 1.5 1.5 0 001.847 2.363l.115-.095A9.437 9.437 0 0118 8.5l.272.004a9.487 9.487 0 019.07 7.75l.04.246H25a.5.5 0 00-.416.777l4 6a.5.5 0 00.832 0l4-6 .04-.072A.5.5 0 0033 16.5h-2.601l-.017-.15C29.567 10.2 24.294 5.5 18 5.5zM2.584 18.723l-.04.072A.5.5 0 003 19.5h2.6l.018.15C6.433 25.8 11.706 30.5 18 30.5c3.013 0 5.873-1.076 8.118-2.995a1.5 1.5 0 00-1.847-2.363l-.115.095A9.437 9.437 0 0118 27.5l-.272-.004a9.487 9.487 0 01-9.07-7.75l-.041-.246H11a.5.5 0 00.416-.777l-4-6a.5.5 0 00-.832 0l-4 6z"
                />
              </g>
            </svg>
          </span>
          <span>
            Refresh
          </span>
          
          <!---->
        </button>
      </div>
      <div
        class="data-overview-content"
      >
        <!-- data -->
        <div
          class="data-overview-table"
        >
          <div
            class="k-table-container"
            data-testid="data-overview-table"
            is-clickable=""
          >
            <!---->
            <section
              class="k-table-wrapper"
            >
              <table
                class="has-hover is-clickable k-table"
                data-tableid="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
              >
                <thead
                  class=""
                >
                  <tr
                    class=""
                  >
                    
                    <th
                      class=""
                    >
                      <span
                        class="d-flex align-items-center"
                      >
                        
                        <span
                          class="sr-only"
                        >
                          actions
                        </span>
                        
                        <!---->
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span
                        class="d-flex align-items-center"
                      >
                        
                        <span
                          class=""
                        >
                          Status
                        </span>
                        
                        <!---->
                      </span>
                    </th>
                    <th
                      class=""
                    >
                      <span
                        class="d-flex align-items-center"
                      >
                        
                        <span
                          class=""
                        >
                          Name
                        </span>
                        
                        <!---->
                      </span>
                    </th>
                    
                  </tr>
                </thead>
                <tbody>
                  
                  <tr
                    class="is-selected"
                    role="link"
                    tabindex="0"
                  >
                    
                    <td
                      class=""
                    >
                      
                      
                      
                    </td>
                    <td
                      class=""
                    >
                      
                      <div
                        class="entity-status is-online"
                      >
                        <span>
                          Online
                        </span>
                      </div>
                      
                    </td>
                    <td
                      class=""
                    >
                      
                      
                      zoneegress-1
                      
                      
                    </td>
                    
                  </tr>
                  
                </tbody>
              </table>
              <!---->
            </section>
          </div>
          <div
            class="pagination"
          >
            <!--v-if-->
            <!--v-if-->
          </div>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </div>
    <div
      class="tab-container"
      data-testid="tab-container"
    >
      
      <header
        class="tab__header"
      >
        
        <div>
          <h3>
             Zone Egress: zoneegress-1
          </h3>
        </div>
        
      </header>
      <div
        class="tab__content-container"
      >
        <div
          class="k-tabs"
        >
          <ul
            aria-label="Tabs"
            role="tablist"
          >
            
            <li
              aria-controls="panel-0"
              aria-selected="true"
              class="active tab-item"
              id="overview-tab"
              role="tab"
              tabindex="0"
            >
              <a
                class="tab-link"
              >
                
                Overview
                
              </a>
            </li>
            <li
              aria-controls="panel-1"
              aria-selected="false"
              class="tab-item"
              id="insights-tab"
              role="tab"
              tabindex="0"
            >
              <a
                class="tab-link"
              >
                
                Zone Egress Insights
                
              </a>
            </li>
            <li
              aria-controls="panel-2"
              aria-selected="false"
              class="tab-item"
              id="xds-configuration-tab"
              role="tab"
              tabindex="0"
            >
              <a
                class="tab-link"
              >
                
                XDS Configuration
                
              </a>
            </li>
            <li
              aria-controls="panel-3"
              aria-selected="false"
              class="tab-item"
              id="envoy-stats-tab"
              role="tab"
              tabindex="0"
            >
              <a
                class="tab-link"
              >
                
                Stats
                
              </a>
            </li>
            <li
              aria-controls="panel-4"
              aria-selected="false"
              class="tab-item"
              id="envoy-clusters-tab"
              role="tab"
              tabindex="0"
            >
              <a
                class="tab-link"
              >
                
                Clusters
                
              </a>
            </li>
            
          </ul>
          
          <div
            aria-labelledby="overview-tab"
            class="tab-container"
            id="panel-0"
            role="tabpanel"
            tabindex="0"
          >
            
            
            <div>
              <div
                class="label-list-content"
              >
                <section
                  aria-describedby="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                  class="noBorder kong-card"
                >
                  <!---->
                  <!---->
                  <div
                    class="k-card-content d-flex"
                  >
                    <div
                      class="k-card-body"
                      id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                    >
                      
                      <div
                        class="label-list__col-wrapper multi-col"
                      >
                        
                        <div>
                          <ul>
                            
                            <li>
                              <h4>
                                type
                              </h4>
                              <p>
                                ZoneEgressOverview
                              </p>
                            </li>
                            <li>
                              <h4>
                                name
                              </h4>
                              <p>
                                zoneegress-1
                              </p>
                            </li>
                            
                          </ul>
                        </div>
                        
                      </div>
                      
                    </div>
                    <!---->
                  </div>
                </section>
              </div>
            </div>
            
            
          </div>
          <div
            aria-labelledby="insights-tab"
            class="tab-container"
            id="panel-1"
            role="tabpanel"
            tabindex="0"
          >
            <!---->
          </div>
          <div
            aria-labelledby="xds-configuration-tab"
            class="tab-container"
            id="panel-2"
            role="tabpanel"
            tabindex="0"
          >
            <!---->
          </div>
          <div
            aria-labelledby="envoy-stats-tab"
            class="tab-container"
            id="panel-3"
            role="tabpanel"
            tabindex="0"
          >
            <!---->
          </div>
          <div
            aria-labelledby="envoy-clusters-tab"
            class="tab-container"
            id="panel-4"
            role="tabpanel"
            tabindex="0"
          >
            <!---->
          </div>
          
        </div>
      </div>
      
    </div>
    
  </div>
</div>
`;

exports[`ZoneEgresses.vue renders zoneegress insights 1`] = `
<div
  class="tab-container"
  data-testid="tab-container"
>
  
  <header
    class="tab__header"
  >
    
    <div>
      <h3>
         Zone Egress: zoneegress-1
      </h3>
    </div>
    
  </header>
  <div
    class="tab__content-container"
  >
    <div
      class="k-tabs"
    >
      <ul
        aria-label="Tabs"
        role="tablist"
      >
        
        <li
          aria-controls="panel-0"
          aria-selected="false"
          class="tab-item"
          id="overview-tab"
          role="tab"
          tabindex="0"
        >
          <a
            class="tab-link"
          >
            
            Overview
            
          </a>
        </li>
        <li
          aria-controls="panel-1"
          aria-selected="true"
          class="active tab-item"
          id="insights-tab"
          role="tab"
          tabindex="0"
        >
          <a
            class="tab-link"
          >
            
            Zone Egress Insights
            
          </a>
        </li>
        <li
          aria-controls="panel-2"
          aria-selected="false"
          class="tab-item"
          id="xds-configuration-tab"
          role="tab"
          tabindex="0"
        >
          <a
            class="tab-link"
          >
            
            XDS Configuration
            
          </a>
        </li>
        <li
          aria-controls="panel-3"
          aria-selected="false"
          class="tab-item"
          id="envoy-stats-tab"
          role="tab"
          tabindex="0"
        >
          <a
            class="tab-link"
          >
            
            Stats
            
          </a>
        </li>
        <li
          aria-controls="panel-4"
          aria-selected="false"
          class="tab-item"
          id="envoy-clusters-tab"
          role="tab"
          tabindex="0"
        >
          <a
            class="tab-link"
          >
            
            Clusters
            
          </a>
        </li>
        
      </ul>
      
      <div
        aria-labelledby="overview-tab"
        class="tab-container"
        id="panel-0"
        role="tabpanel"
        tabindex="0"
      >
        <!---->
      </div>
      <div
        aria-labelledby="insights-tab"
        class="tab-container"
        id="panel-1"
        role="tabpanel"
        tabindex="0"
      >
        
        
        <section
          aria-describedby="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
          class="noBorder kong-card"
        >
          <!---->
          <!---->
          <div
            class="k-card-content d-flex"
          >
            <div
              class="k-card-body"
              id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
            >
              
              <ul
                class="accordion"
              >
                
                
                <li
                  class="accordion-item relative border-b active"
                >
                  <button
                    aria-expanded="true"
                    class="accordion-item-header"
                    data-testid="accordion-item-button"
                    type="button"
                  >
                    
                    <h4
                      class="text-lg font-medium"
                    >
                      <span
                        class="color-green-400"
                      >
                         Connect time: July 13, 2021 at 8:41:04 AM
                      </span>
                      <!--v-if-->
                    </h4>
                    
                  </button>
                  <transition-stub
                    appear="false"
                    css="true"
                    name="accordion"
                    persisted="false"
                  >
                    <div
                      class="px-4 py-1"
                      data-testid="accordion-item-content"
                    >
                      
                      <div>
                        <div>
                          <h5
                            class="overview-tertiary-title"
                          >
                             General Information: 
                          </h5>
                          <ul>
                            <!--v-if-->
                            <li>
                              <strong>
                                Control Plane Instance ID:
                              </strong>
                                
                              <span
                                class="mono"
                              >
                                kuma-control-plane-84f5589874-nmspq-0867
                              </span>
                            </li>
                            <li>
                              <strong>
                                Last Connected:
                              </strong>
                                July 13, 2021
                            </li>
                            <!--v-if-->
                          </ul>
                        </div>
                        <div>
                          <ul
                            class="overview-stat-grid"
                          >
                            
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                Cds: 
                              </h6>
                              <ul>
                                
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    3
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    3
                                  </span>
                                </li>
                                
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                Eds: 
                              </h6>
                              <ul>
                                
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    2
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    3
                                  </span>
                                </li>
                                
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                Lds: 
                              </h6>
                              <ul>
                                
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    3
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    3
                                  </span>
                                </li>
                                
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                Rds: 
                              </h6>
                              <ul>
                                
                                
                              </ul>
                            </li>
                            
                          </ul>
                        </div>
                      </div>
                      
                    </div>
                  </transition-stub>
                </li>
                
                
              </ul>
              
            </div>
            <!---->
          </div>
        </section>
        
        
      </div>
      <div
        aria-labelledby="xds-configuration-tab"
        class="tab-container"
        id="panel-2"
        role="tabpanel"
        tabindex="0"
      >
        <!---->
      </div>
      <div
        aria-labelledby="envoy-stats-tab"
        class="tab-container"
        id="panel-3"
        role="tabpanel"
        tabindex="0"
      >
        <!---->
      </div>
      <div
        aria-labelledby="envoy-clusters-tab"
        class="tab-container"
        id="panel-4"
        role="tabpanel"
        tabindex="0"
      >
        <!---->
      </div>
      
    </div>
  </div>
  
</div>
`;
